// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new ElasticBPolicyStatementBuilder .addResource adds resource 1`] = `
ElasticBPolicyStatementBuilder {
  "policyStatementProps": PolicyStatementProduct {
    "actions": [],
    "resources": [
      "*",
    ],
  },
}
`;

exports[`new ElasticBPolicyStatementBuilder .setPermissions allows sending EC2 stats 1`] = `
ElasticBPolicyStatementBuilder {
  "policyStatementProps": PolicyStatementProduct {
    "actions": [
      "elasticbeanstalk:PutInstanceStatistics",
    ],
    "resources": [],
  },
}
`;

exports[`new ElasticBPolicyStatementBuilder has correct defaults set 1`] = `
ElasticBPolicyStatementBuilder {
  "policyStatementProps": PolicyStatementProduct {
    "actions": [],
    "resources": [],
  },
}
`;
